@@ -18,89 +18,71 @@ package com.echothree.control.user.search.server.command;
 
 import com.echothree.control.user.search.common.form.GetSearchDefaultOperatorForm;
 import com.echothree.control.user.search.common.result.SearchResultFactory;
-import com.echothree.model.control.core.common.ComponentVendors;
-import com.echothree.model.control.core.common.EntityTypes;
 import com.echothree.model.control.core.common.EventTypes;
-import com.echothree.model.control.core.server.logic.EntityInstanceLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.search.server.control.SearchControl;
+import com.echothree.model.control.search.server.logic.SearchDefaultOperatorLogic;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.search.server.entity.SearchDefaultOperator;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetSearchDefaultOperatorCommand
-        extends BaseSimpleCommand<GetSearchDefaultOperatorForm> {
-    
+        extends BaseSingleEntityCommand<SearchDefaultOperator, GetSearchDefaultOperatorForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
-    
+
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.SearchDefaultOperator.name(), SecurityRoles.Review.name())
-                        )))
-                )));
-        
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("SearchDefaultOperatorName", FieldType.ENTITY_NAME, true, null, null),
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("SearchDefaultOperatorName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
                 new FieldDefinition("Uuid", FieldType.UUID, false, null, null)
-                ));
+        );
     }
-    
+
     /** Creates a new instance of GetSearchDefaultOperatorCommand */
     public GetSearchDefaultOperatorCommand(UserVisitPK userVisitPK, GetSearchDefaultOperatorForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
-        var result = SearchResultFactory.getGetSearchDefaultOperatorResult();
-        var searchDefaultOperatorName = form.getSearchDefaultOperatorName();
-        var parameterCount = (searchDefaultOperatorName == null ? 0 : 1) + EntityInstanceLogic.getInstance().countPossibleEntitySpecs(form);
+    protected SearchDefaultOperator getEntity() {
+        var searchDefaultOperator = SearchDefaultOperatorLogic.getInstance().getSearchDefaultOperatorByUniversalSpec(this, form, true);
 
-        if(parameterCount == 1) {
-            var searchControl = Session.getModelController(SearchControl.class);
-            SearchDefaultOperator searchDefaultOperator = null;
-
-            if(searchDefaultOperatorName == null) {
-                var entityInstance = EntityInstanceLogic.getInstance().getEntityInstance(this, form, ComponentVendors.ECHO_THREE.name(),
-                        EntityTypes.SearchDefaultOperator.name());
-                
-                if(!hasExecutionErrors()) {
-                    searchDefaultOperator = searchControl.getSearchDefaultOperatorByEntityInstance(entityInstance);
-                }
-            } else {
-                searchDefaultOperator = searchControl.getSearchDefaultOperatorByName(searchDefaultOperatorName);
-
-                if(searchDefaultOperator == null) {
-                    addExecutionError(ExecutionErrors.UnknownSearchDefaultOperatorName.name(), searchDefaultOperatorName);
-                }
-            }
-
-            if(!hasExecutionErrors()) {
-                result.setSearchDefaultOperator(searchControl.getSearchDefaultOperatorTransfer(getUserVisit(), searchDefaultOperator));
-                sendEvent(searchDefaultOperator.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
-            }
-        } else {
-            addExecutionError(ExecutionErrors.InvalidParameterCount.name());
+        if(searchDefaultOperator != null) {
+            sendEvent(searchDefaultOperator.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
         }
-        
+
+        return searchDefaultOperator;
+    }
+
+    @Override
+    protected BaseResult getResult(SearchDefaultOperator searchDefaultOperator) {
+        var searchControl = Session.getModelController(SearchControl.class);
+        var result = SearchResultFactory.getGetSearchDefaultOperatorResult();
+
+        if(searchDefaultOperator != null) {
+            result.setSearchDefaultOperator(searchControl.getSearchDefaultOperatorTransfer(getUserVisit(), searchDefaultOperator));
+        }
+
         return result;
     }
-    
+
 }
